--- a/src/gtk/sass/_common-3.0.scss
+++ b/src/gtk/sass/_common-3.0.scss
@@ -86,10 +86,10 @@ button.gtkstyle-fallback { // For Cinnamon system setting
   }
 
   &:selected {
-    @extend %selected_items;
+    @extend %accent_items;
 
     &:focus {
-      @extend %selected_items;
+      @extend %accent_items;
     }
 
     &:hover { background-color: mix(black, $accent_color, 10%); }
@@ -103,7 +103,7 @@ textview {  // This will get overridden by .view, needed by gedit line numbers
 
   text {
     background-color: $base_color;
-    selection { &:focus, & { @extend %selected_items; }}
+    selection { &:focus, & { @extend %accent_items; }}
   }
 }
 
@@ -128,7 +128,7 @@ flowbox {
     border-radius: 2px;
 
     &:selected {
-      @extend %selected_items;
+      @extend %accent_items;
 
       outline-offset: -2px;
     }
@@ -148,7 +148,7 @@ label {
   }
 
   row:selected &,
-  &:selected { @extend %nobg_selected_items; }
+  &:selected { @extend %nobg_accent_items; }
 
   selection {
     color: $base_color;
@@ -299,7 +299,7 @@ entry {
 
   &:disabled { @include entry(insensitive); }
 
-  selection { &:focus, & { @extend %selected_items; }}
+  selection { &:focus, & { @extend %accent_items; }}
 
   // error and warning style
   @each $e_type, $e_color, $e_fg_color in (warning, $warning_color, $warning_fg_color),
@@ -909,7 +909,7 @@ modelbutton.flat {
   @extend %undecorated_button;
 
   &:hover { background-color: if($variant=='light', mix($fg_color,$bg_color,5%), mix($fg_color,$bg_color,10%)); }
-  &:active, &:selected { &, arrow { @extend %selected_items; }}
+  &:active, &:selected { &, arrow { @extend %accent_items; }}
   &:checked { color: $fg_color; }
   &:disabled { color: $insensitive_fg_color; }
 
@@ -1831,7 +1831,7 @@ treeview.view {
   &:selected {
     &, &:focus {
       border-radius: 0;
-      border-left-color: mix($base_color, $accent_color, 50%);
+      border-left-color: mix($selected_fg_color, $selected_bg_color, 50%);
       border-top-color: rgba($fg_color, 0.1);   // doesn't work unfortunately
 
       @extend %selected_items;
@@ -1842,7 +1842,7 @@ treeview.view {
     color: $insensitive_fg_color;
 
     &:selected {
-      color: mix($base_color, $accent_color, 40%);
+      color: mix($selected_fg_color, $selected_bg_color, 40%);
     }
   }
 
@@ -1870,7 +1870,7 @@ treeview.view {
     &:hover { color: $fg_color; }
 
     &:selected {
-      color: mix($base_color, $accent_color, 70%);
+      color: mix($selected_fg_color, $selected_bg_color, 70%);
       &:hover { color: $base_color; }
     }
 
@@ -2951,7 +2951,7 @@ row {
   &:not(:hover) { transition: all 150ms $ease-out-quad; }
 
   &:selected {
-    @extend %selected_items;
+    @extend %accent_items;
 
     button { @extend %selected-button; }
   }
@@ -3021,7 +3021,7 @@ calendar {
   padding: 0 6px;
 
   &:selected {
-    @extend %selected_items;
+    @extend %accent_items;
     border-radius: 3px;
   }
 
@@ -3773,17 +3773,30 @@ headerbar {
 }
 
 // catch all extend
+%accent_items {
+  background-color: $accent_color;
+  color: $base_color;
+
+  &:disabled { color: mix($base_color, $accent_color, 50%); }
+}
+
 %selected_items {
   background-color: $selected_bg_color;
   color: $selected_fg_color;
+
+  &:disabled { color: mix($selected_fg_color, $selected_bg_color, 50%); }
+}
+
+%nobg_accent_items {
+  color: $base_color;
 
   &:disabled { color: mix($base_color, $accent_color, 50%); }
 }
 
 %nobg_selected_items {
-  color: $base_color;
+  color: $selected_fg_color;
 
-  &:disabled { color: mix($base_color, $accent_color, 50%); }
+  &:disabled { color: mix($selected_fg_color, $selected_bg_color, 50%); }
 }
 
 /*********
@@ -3829,6 +3842,6 @@ button.emoji-section {
     border-radius: 3px;
     transition: all 0.1s cubic-bezier(0, 0, 0.2, 1);
 
-    &:hover { @extend %selected_items; }
+    &:hover { @extend %accent_items; }
   }
 }
