--- a/src/gtk/gtk-3.0/gtk-dark-yellow.css
+++ b/src/gtk/gtk-3.0/gtk-dark-yellow.css
@@ -96,7 +96,7 @@ button.gtkstyle-fallback:active, button.gtkstyle-fallback:checked {
 }
 
 .view:selected:hover, iconview:selected:hover {
-  background-color: #c8a768;
+  background-color: #b48222;
 }
 
 textview, textview.view {
@@ -2404,7 +2404,7 @@ treeview.view {
 }
 
 treeview.view acceleditor > label {
-  background-color: #DEB974;
+  background-color: #c89026;
 }
 
 treeview.view:selected, treeview.view:selected:focus {
@@ -2429,7 +2429,7 @@ treeview.view.separator {
 treeview.view:drop(active) {
   border-style: solid none;
   border-width: 1px;
-  border-color: #deceae;
+  border-color: #d3b987;
 }
 
 treeview.view:drop(active).after {
@@ -2458,7 +2458,7 @@ treeview.view.expander:selected {
 }
 
 treeview.view.expander:selected:hover {
-  color: #33353F;
+  color: #FAFAFA;
 }
 
 treeview.view.expander:checked {
@@ -2466,16 +2466,16 @@ treeview.view.expander:checked {
 }
 
 treeview.view.progressbar, treeview.view.progressbar:hover {
-  color: #33353F;
+  color: #FAFAFA;
   border-radius: 3px;
   background-color: #DEB974;
 }
 
 treeview.view.progressbar:selected, treeview.view.progressbar:selected:focus, treeview.view.progressbar:hover:selected, treeview.view.progressbar:hover:selected:focus {
-  color: #DEB974;
+  color: #c89026;
   border-radius: 3px;
   box-shadow: none;
-  background-color: #33353F;
+  background-color: #FAFAFA;
 }
 
 treeview.view.trough, treeview.view.trough:hover {
@@ -2486,7 +2486,7 @@ treeview.view.trough, treeview.view.trough:hover {
 }
 
 treeview.view.trough:selected, treeview.view.trough:selected:focus, treeview.view.trough:hover:selected, treeview.view.trough:hover:selected:focus {
-  color: #33353F;
+  color: #FAFAFA;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 3px;
   border-width: 0;
@@ -2506,7 +2506,7 @@ treeview.view header button {
 }
 
 treeview.view header button:hover {
-  color: #DEB974;
+  color: #c89026;
 }
 
 treeview.view header button:active {
@@ -2538,8 +2538,8 @@ treeview.view header.button.dnd:hover,
 treeview.view header.button.dnd:active {
   padding: 0 6px;
   transition: none;
-  color: #33353F;
-  background-color: #DEB974;
+  color: #FAFAFA;
+  background-color: #c89026;
   border-radius: 0;
   border-style: none;
 }
@@ -4945,7 +4945,7 @@ headerbar button.titlebutton.minimize:active {
   background-image: -gtk-scaled(url("assets/titlebutton-restore-active-dark.png"), url("assets/titlebutton-restore-active-dark@2.png"));
 }
 
-.emoji widget:hover, .view:selected, .view:selected:focus, textview text selection:focus, textview text selection, iconview:selected, iconview:selected:focus, flowbox flowboxchild:selected, entry selection:focus, entry selection, menuitem.button.flat:active, menuitem.button.flat:active arrow, menuitem.button.flat:selected, menuitem.button.flat:selected arrow,
+.emoji widget:hover, textview text selection:focus, textview text selection, flowbox flowboxchild:selected, entry selection:focus, entry selection, menuitem.button.flat:active, menuitem.button.flat:active arrow, menuitem.button.flat:selected, menuitem.button.flat:selected arrow,
 modelbutton.flat:active,
 modelbutton.flat:active arrow,
 modelbutton.flat:selected,
@@ -4954,7 +4954,7 @@ modelbutton.flat:selected arrow, row:selected, calendar:selected {
   color: #33353F;
 }
 
-.emoji widget:disabled:hover, .view:disabled:selected, textview text selection:disabled, iconview:disabled:selected, iconview:disabled:selected:focus, flowbox flowboxchild:disabled:selected, entry selection:disabled, menuitem.button.flat:disabled:active, menuitem.button.flat:active arrow:disabled, menuitem.button.flat:disabled:selected, menuitem.button.flat:selected arrow:disabled,
+.emoji widget:disabled:hover, textview text selection:disabled, flowbox flowboxchild:disabled:selected, entry selection:disabled, menuitem.button.flat:disabled:active, menuitem.button.flat:active arrow:disabled, menuitem.button.flat:disabled:selected, menuitem.button.flat:selected arrow:disabled,
 modelbutton.flat:disabled:active,
 modelbutton.flat:active arrow:disabled,
 modelbutton.flat:disabled:selected,
@@ -4969,7 +4969,7 @@ filechooser placessidebar.sidebar row.sidebar-row.has-open-popup:selected, filec
 .nautilus-window placessidebar.sidebar row.sidebar-row:active:hover, .budgie-popover.budgie-menu button:checked, .atril-window scrolledwindow.frame > .view:selected, .atril-window scrolledwindow.frame > .view:active,
 .xreader-window scrolledwindow.frame > .view:selected,
 .xreader-window scrolledwindow.frame > .view:active, .caja-desktop > widget.entry:selected, .caja-desktop > widget.entry:focus:selected, #MozillaGtkWidget > widget > scrolledwindow > textview text:selected, #MozillaGtkWidget > widget > scrolledwindow > textview text:selected:focus,
-#MozillaGtkWidget > widget > scrolledwindow > textview text selection, .nemo-window .nemo-window-pane widget.entry:selected:focus, .nemo-window .nemo-window-pane widget.entry:selected, .nemo-window .nemo-places-sidebar .places-treeview:selected, .nemo-window .nemo-places-sidebar .places-treeview:selected:hover, treeview.view:selected, treeview.view:selected:focus {
+#MozillaGtkWidget > widget > scrolledwindow > textview text selection, .nemo-window .nemo-window-pane widget.entry:selected:focus, .nemo-window .nemo-window-pane widget.entry:selected, .nemo-window .nemo-places-sidebar .places-treeview:selected, .nemo-window .nemo-places-sidebar .places-treeview:selected:hover, .view:selected, .view:selected:focus, iconview:selected, iconview:selected:focus, treeview.view:selected, treeview.view:selected:focus {
   background-color: #c89026;
   color: #FAFAFA;
 }
@@ -4979,7 +4979,7 @@ filechooser placessidebar.sidebar row.sidebar-row:disabled:selected, filechooser
 .nautilus-window placessidebar.sidebar row.sidebar-row:disabled:active:hover, .budgie-popover.budgie-menu button:disabled:checked, .atril-window scrolledwindow.frame > .view:disabled:selected, .atril-window scrolledwindow.frame > .view:disabled:active,
 .xreader-window scrolledwindow.frame > .view:disabled:selected,
 .xreader-window scrolledwindow.frame > .view:disabled:active, .caja-desktop > widget.entry:disabled:selected, #MozillaGtkWidget > widget > scrolledwindow > textview text:disabled:selected,
-#MozillaGtkWidget > widget > scrolledwindow > textview text selection:disabled, .nemo-window .nemo-window-pane widget.entry:disabled:selected, .nemo-window .nemo-places-sidebar .places-treeview:disabled:selected, treeview.view:disabled:selected {
+#MozillaGtkWidget > widget > scrolledwindow > textview text selection:disabled, .nemo-window .nemo-window-pane widget.entry:disabled:selected, .nemo-window .nemo-places-sidebar .places-treeview:disabled:selected, .view:disabled:selected, iconview:disabled:selected, iconview:disabled:selected:focus {
   color: #e1c590;
 }
 
